# ng-video-lecture

./: .gitignore  README.md  gpt.py  pyproject.toml  setup.py
hosting/: index.html  setup_gptoss_vllm.sh
nanogpt_lecture/: __init__.py  gpt.py  run_trained_model.py  train_gpt.py
nanogpt_lecture.egg-info/: PKG-INFO
